# prism

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  test-hot-restart.cjs  test-proxy-config.js  tree.md
.claude/: settings.json
.github/workflows/: release.yml
docs/: dark-mode-design.md  multi-model-routing-design.md  proxy-config-improvement.md  updater-setup.md  使用指南.md  常见问题.md  开发文档.md  技术架构.md  路线图.md  需求文档.md
scripts/: bump-version.sh  publish-release.sh  release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: init.sql
src-tauri/src/: commands.rs  lib.rs  tray.rs
src-tauri/src/config/: INFO.md  mod.rs
src-tauri/src/db/: config.rs  logs.rs  mod.rs  schema.rs  stats.rs  stats.rs.bak
src-tauri/src/db/stats/: dashboard.rs  mod.rs  ranking.rs  time_range.rs  token_stats.rs  types.rs
src-tauri/src/logger/: INFO.md  mod.rs
src-tauri/src/proxy/: INFO.md  handler.rs  mod.rs  proxy_config.rs  stream.rs  token_counter.rs  utils.rs
src/components/: ConfirmDialog.tsx  Layout.tsx  LogDetailModal.tsx  Modal.tsx  ProfileForm.tsx  ProfileRanking.tsx  ProfileSelector.tsx  SetupGuideModal.tsx  TabNavigation.tsx  UpdateChecker.tsx  UpdateDialog.tsx
src/contexts/: LanguageContext.tsx  ThemeContext.tsx
src/hooks/: useRealtimeLog.ts  useRealtimeStats.ts
src/i18n/: index.ts
src/lib/: api.ts
src/pages/: Dashboard.tsx  Logs.tsx  Profiles.tsx  Settings.tsx
test/: TEST.md  test-proxy.js  test-proxy.sh  test-tauri-api.js
(+26 files in other folders)
