[package]
name = "app"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"

# HTTP 服务器和代理
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP 客户端（启用所有压缩格式支持）
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "deflate", "brotli", "zstd"], default-features = false }

# 异步流处理
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.0"

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }

# 全局静态变量
lazy_static = "1.4"

# SQLite 数据库
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"

# 时间处理
chrono = "0.4"

# 随机数生成
rand = "0.8"

# 正则表达式
regex = "1.10"

# 图片处理（用于托盘图标）
image = "0.25"

# Token 计数（用于本地 token 统计）
tiktoken-rs = "0.5"
